--- a/src/Mcms/PatientBundle/Resources/views/Default/index.html.twig
+++ b/src/Mcms/PatientBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,6 @@
-Hello {{ name }}!
+<form action="{{ path('create')}}" method="post" {{ form_enctype(form1) }}>
+    {{ form_widget(form2) }}
+    {{ form_widget(form1) }}
+
+    <input type="submit" />
+</form>
