--- a/src/Mcms/EmployeeBundle/Resources/views/Default/index.html.twig
+++ b/src/Mcms/EmployeeBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,9 @@
-Hello {{ name }}!
+{% extends '::base.html.twig' %}
+{% block body %}
+<form action="{{ path('createemployee')}}" method="post" {{ form_enctype(form) }}>
+	{{form_errors(form)}}
+    {{ form_widget(form) }}
+    <input type="submit" />
+</form>
+
+{% endblock %}
