changed content display - dashboard || added some attributes - css

--- a/src/Mcms/DashboardBundle/Resources/views/Administrator/admin.html.twig
+++ b/src/Mcms/DashboardBundle/Resources/views/Administrator/admin.html.twig
@@ -28,8 +28,10 @@
 {% endblock %}
 
 {% block content %}
-    
-        <h2>Tytuł</h2>
-        <p>Opis</p>
-    
+    <div class="window1">
+	        <h3><span>Tytuł</span></h3>
+		<div class="inside">
+			<p>Opis</p>
+		</div>
+    </div>
 {% endblock %}
