Another BUG fix.

--- a/src/Mcms/UserBundle/Resources/views/Manage/showUser.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/Manage/showUser.html.twig
@@ -23,7 +23,7 @@
                     <td>{{ user.lastname }}</td>
                     <td>
                         {% for role in user.userRoles %}
-                            <p>{{ role.role.name }}</p>
+                            <p>{{ role.name }}</p>
                         {% endfor %}
                     </td>
                     <td>
