--- a/src/Mcms/ProductBundle/Resources/views/Manage/editProduct.html.twig
+++ b/src/Mcms/ProductBundle/Resources/views/Manage/editProduct.html.twig
@@ -1,20 +1,29 @@
-{% extends '::clean.html.twig' %}
+{% extends '::base.html.twig' %}
 
-{% block body %}
-	<h1>Edit {{ product.name }} details.</h1>
-
-	{{ form_errors(form) }}
-	<form action="{{ path('product_update',{ 'id': product.id }) }}" method="post" {{ form_enctype(form) }}>
-    	{{ form_row(form.name) }}
-    	{{ form_row(form.price) }}
-    	{{ form_rest(form) }}
-    <p>
-        <button type="submit">Update</button>
-    </p>
-</form>
-<form action="{{ path('product_delete', { 'id': product.id }) }}" method="post">
-   	{{ form_widget(delete_form) }}
-    <button type="submit" onClick="return confirm('Are you sure you want to delete?')">Delete</button>
-</form>
-
+{% block content %}
+	<div class="message msgerror">
+        <a class="close"></a>
+            {{ form_errors(form.price) }} 
+			{{ form_errors(form.name) }} 
+    </div><!-- end alert messages-->
+	<h1 class="pageTitle">Edycja produktu</h1>
+	<div class="window1">
+				<h3><span>{{ product.name }} </span><form action="{{ path('product_delete', { 'id': product.id }) }}" method="post">
+				{{ form_widget(delete_form) }}
+				<button style="float:right; margin:-41px 25px 0 0" type="submit" onClick="return confirm('Czy na pewno chcesz usunąć wskazany produkt?')">Usuń</button>
+			</form></h3>
+		<div class="inside">			
+			<form class="form_default" action="{{ path('product_update',{ 'id': product.id }) }}" method="post" {{ form_enctype(form) }}>
+				<p>	
+					{{ form_label(form.name) }}  {{ form_widget(form.name) }}</br></br>
+					{{ form_label(form.price) }}  {{ form_widget(form.price) }}					
+					{{ form_rest(form) }}
+				</p>
+				<button type="submit">Aktualizuj</button>
+			</form>
+			
+			
+		</div>
+	</div>
 {% endblock %}
+
