--- a/src/Mcms/ProductBundle/Resources/views/Manage/listAllProducts.html.twig
+++ b/src/Mcms/ProductBundle/Resources/views/Manage/listAllProducts.html.twig
@@ -1,29 +1,61 @@
-{% extends '::clean.html.twig' %}
+{% extends '::base.html.twig' %}
+{% block stylesheets %}
+<script src="{{ asset('js/jquery.dataTables.min.js') }}" type="text/javascript" ></script>
+<script type="text/javascript">
+$(document).ready(function() {
+    $('#example').dataTable();
+} );
+</script>
+{% endblock %}
+{%block sidebar%}
+<h3 class="open">Produkty</h3>
+        <div class="content" style="display: block;">
+        	<ul class="leftmenu">
+            	<li><a href="{{ path('product_new') }}" class="home">Utwórz produkt</a></li>
+                <li><a href="{{ path('products') }}" class="form">Lista produktów</a></li>
+                
+            </ul>
+        </div>
+{% endblock %}
+{% block content %}
+<h1 class="pageTitle">Lista produktów</h1>
+	<div class="tableOpt">
+		<h4>Lista produktów
+<a href="{{ path('product_new') }}"><button type="submit" style="float:right">Utwórz produkt</button></a></h4>	
+    </div><!--end table Options-->	
+		<table cellpadding="0" cellspacing="0" class="tableHead" width="100%" id="example">
+				<colgroup>
+					<col class="head1" width="25%" />
+					<col class="head0" width="25%" />
+					<col class="head1" width="25%" />
+					<col class="head0" width="25%" />              
+				</colgroup>
+				<tr>
+					<td>Id</td>
+					<td>Nazwa</td>
+					<td>Cena</td>
+					<td>Akcja</td>                
+				</tr>
+		</table>
+	<div class="tableWrapper">
+        <table cellpadding="0" cellspacing="0" class="table" id="example" width="100%">
+                <colgroup>
+                    <col class="con1" width="25%" />
+                    <col class="con0" width="25%" />
+                    <col class="con1" width="25%" />
+                    <col class="con0" width="25%" />                   
+                </colgroup>
 
-{% block body %}
-	<h1>List with all products</h1>
-
-	<table>
-		<thead>
-			<tr>
-				<th>Id</th>			
-				<th>Name</th>			
-				<th>Price</th>
-				<th></th>			
-			<tr>
-		</thead>
-
-		<tbody>
-		{% for product in products %}
-			<tr>
-				<td><a href="{{ path('product_show', { 'id': product.id }) }}">{{ product.id }}</a></td>
-				<td>{{ product.name }}</td>
-				<td>{{ product.price }}</td>
-				<td><a href="{{ path('product_edit', { 'id': product.id }) }}">edit</a></td>
-			</tr>
-		{% endfor %}
-		</tbody>
-	</table>
-
-	<a href="{{ path('product_new') }}">Create new</a>
+		
+			{% for product in products %}
+				<tr>
+					<td><a href="{{ path('product_show', { 'id': product.id }) }}">{{ product.id }}</a></td>
+					<td>{{ product.name }}</td>
+					<td>{{ product.price }}</td>
+					<td><a class="editlink" href="{{ path('product_edit', { 'id': product.id }) }}">Edytuj</a></td>
+				</tr>
+			{% endfor %}
+		</table>		
+	</div>	
+	
 {% endblock %}
