--- a/src/Mcms/UserBundle/Resources/views/Manage/listUsers.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/Manage/listUsers.html.twig
@@ -1,41 +1,61 @@
-{% extends '::clean.html.twig' %}
+{% extends '::base.html.twig' %}
+{% block stylesheets %}
+<script src="{{ asset('js/jquery.dataTables.min.js') }}" type="text/javascript" ></script>
+<script type="text/javascript">
+$(document).ready(function() {
+    $('#example').dataTable();
+} );
+</script>
+{% endblock %}
 
-{% block body %}
-    <h1>List with all users</h1>
+{% block content %}
+ <h1 class="pageTitle">Lista użytkowników</h1>
+	<div class="tableOpt">
+			
+    </div><!--end table Options-->	
+		<table cellpadding="0" cellspacing="0" class="tableHead" width="100%" id="example">
+				<colgroup>
+					<col class="head1" width="20%" />
+					<col class="head0" width="20%" />
+					<col class="head1" width="20%" />
+					<col class="head0" width="20%" />
+					<col class="head1" width="20%" />					
+				</colgroup>
+				<tr>
+					<td>Id</td>
+					<td>Login</td>
+					<td>Imię</td>
+					<td>Nazwisko</td>
+					<td>Aktywność</td> 					
+				</tr>
+		</table>
+	<div class="tableWrapper">
+        <table cellpadding="0" cellspacing="0" class="table" id="example" width="100%">
+                <colgroup>
+                    <col class="con1" width="20%" />
+                    <col class="con0" width="20%" />
+                    <col class="con1" width="20%" />
+                    <col class="con0" width="20%" />
+					<col class="con1" width="20%" /> 					
+                </colgroup>
 
-    <table>
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Username</th>
-                <th>Firstname</th>
-                <th>Lastname</th>
-                <th>User roles</th>
-                <th>Active</th>
-            </tr>
-        </thead>
-
-        <tbody>
-            {% for user in users %}
-                <tr>
-                    <td><a href="{{ path('user_show', { 'id': user.id }) }}">{{ user.id }}</a></td>
-                    <td>{{ user.username }}</td>
-                    <td>{{ user.firstname }}</td>
-                    <td>{{ user.lastname }}</td>
-                    <td>
-                        {% for role in user.userRoles %}
-                            <p>{{ role.name }}</p>
-                        {% endfor %}
-                    </td>
-                    <td>
-                        {% if user.isactive %}
+		
+			{% for user in users %}
+				<tr>
+					<td><a href="{{ path('user_show', { 'id': user.id }) }}">{{ user.id }}</a></td>
+					<td>{{ user.username }}</td>
+					<td>{{ user.firstname }}</td>
+					<td>{{ user.lastname }}</td>
+					<td> 
+					{% if user.isactive %}
                             TRUE
                         {% else %}
                             FALSE
                         {% endif %}
-                    </td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+					</td>
+				</tr>
+			{% endfor %}
+		</table>		
+	</div>	
+	
 {% endblock %}
