simple validation & field error block

--- a/src/Mcms/ProductBundle/Resources/views/Manage/newProduct.html.twig
+++ b/src/Mcms/ProductBundle/Resources/views/Manage/newProduct.html.twig
@@ -1,11 +1,8 @@
 {% extends '::base.html.twig' %}
+{% use '::formErrors.html.twig' %}
 
 {% block content %}
-	<div class="message msgerror">
-        <a class="close"></a>
-           {{ form_errors(form.price) }} 
-		   {{ form_errors(form.name) }} 
-    </div><!-- end alert messages-->
+	{{ block('field_errors') }}
 	<h1 class="pageTitle">Utwórz nowy produkt</h1>
     <div class="window1">
 	    <h3><span></span></h3>
