--- a/app/Resources/views/formErrors.html.twig
+++ b/app/Resources/views/formErrors.html.twig
@@ -1,6 +1,7 @@
 {# app/Resources/formErrors.html.twig #}
 
 {% block field_errors %}
+{% spaceless %}
 	{% if errors is defined and errors %}
 		<div class="message msgerror">
 			<a class="close"></a>
@@ -13,4 +14,22 @@
     		{% endif %}
 		</div>
 	{% endif %}
+{% endspaceless %}
 {% endblock field_errors %}
+
+{% block form_errors %}
+{% spaceless %}
+    {% if errors is defined and errors %}
+        <div class="message msgerror">
+            <a class="close"></a>
+            {% if errors|length > 0 %}
+                <ul class="error_list">
+                    {% for error in errors %}
+                        <li>{{ error.messageTemplate|trans(error.messageParameters, 'validators') }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        </div>
+    {% endif %}
+{% endspaceless %}
+{% endblock form_errors %}
