--- a/src/Mcms/ProductBundle/Resources/views/Manage/newProduct.html.twig
+++ b/src/Mcms/ProductBundle/Resources/views/Manage/newProduct.html.twig
@@ -1,8 +1,8 @@
 {% extends '::base.html.twig' %}
-{% use '::formErrors.html.twig' %}
+{% form_theme form '::formErrors.html.twig' %}
 
 {% block content %}
-	{{ block('field_errors') }}
+	{{ form_errors(form.price) }}
 	<h1 class="pageTitle">Utwórz nowy produkt</h1>
     <div class="window1">
 	    <h3><span></span></h3>
