--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,3 +1,4 @@
+{% import '::helpers.html.twig' as helpers %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -16,8 +17,8 @@
 		<a href=""><img src="images/logo.png" alt=""  /></a>    
 		<div class="tabmenu">
 			<ul>
-				<li class="current"><a href="main.html" class=""><span>Strona główna</span></a></li>          
-				<li><a href="users.html" class=""><span>Użytkownicy</span></a></li>					
+				{{ helpers.tab('users_list','Lista użytkowników') }}
+				{{ helpers.tab('products', 'Lista produktów') }}			
 			</ul>
 		</div><!-- tabmenu -->
     
