--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,36 +1,34 @@
+{# app/Resources/views/base.html.twig #}
 <!DOCTYPE html>
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>        
+        <title> {% block title %} Welcome! {% endblock %} </title>        
     	<link href="{{ asset('css/style.css') }}" rel="stylesheet" type="text/css" />
-		{% block stylesheets %}{% endblock %}
+		{% block stylesheets %} {% endblock %}
         <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript" ></script>
+		<script src="{{ asset('js/jquery-1.7.2.min.js') }}" type="text/javascript" ></script>
 		<script src="{{ asset('js/jquery.dataTables.min.js') }}" type="text/javascript" ></script>
     </head>
-    <body class="bodygrey">
-	<div class="headerspace"></div>
-	<div class="header">	
+    <body>
+	<div id="header">
 		<!-- logo -->
-		<a href=""><img src="images/logo.png" alt=""  /></a>    
-		<div class="tabmenu">
+		<a href=""><img src="images/logo.png" alt="" /></a>    
+		<div id="tabmenu">
 			<ul>
 				<li class="current"><a href="main.html" class=""><span>Strona główna</span></a></li>          
 				<li><a href="users.html" class=""><span>Użytkownicy</span></a></li>					
 			</ul>
 		</div><!-- tabmenu -->
     
-		<div class="accountinfo">  	
-			<div class="info">
-				<h3>{{ app.user.firstname }} {{ app.user.lastname }}</h3>
-				<small>test@test.test</small>
-				<p>
-					<a href="">Mój profil</a> <a href="{{ path('logout') }}">Wyloguj</a>
-				</p>
-			</div>
-		</div><!-- accountinfo end -->
-	</div><!-- header end -->
+		<div id="account">
+			<h3>{{ app.user.firstname }} {{ app.user.lastname }}</h3>
+			<small>test@test.test</small>
+			<p>
+				<a href="">Mój profil</a> <a href="{{ path('logout') }}">Wyloguj</a>
+			</p>
+		</div><!-- account -->
+	</div><!-- header -->
 	
 	<div class="sidebar">
 		<div id="accordion">
@@ -61,10 +59,8 @@
 		
 		<br />
 		
-<div class="footer footer_float">
-	<div class="footerinner">
-    	&copy;2012 Ocenzurowana stopka .
-    </div><!-- footerinner -->
-</div><!-- footer -->
+		<div id="footer">
+    		&copy;2012 Ocenzurowana stopka.
+		</div><!-- footer -->
     </body>
 </html>
