--- a/src/Mcms/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/Security/login.html.twig
@@ -3,6 +3,7 @@
     <head>
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 		<link href="{{ asset('css/style.css') }}" rel="stylesheet" type="text/css" />
+		<link href="{{ asset('css/oneCol.css') }}" rel="stylesheet" type="text/css" />
        		<title>Logowanie</title>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<script>
