--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,67 +1,88 @@
-
+/*
+ reset
+*/
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, font, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td {
-	background: transparent;
-	border: 0;
 	margin: 0;
 	padding: 0;
+	border: 0;
+	outline: 0;
+	font-weight: inherit;
+	font-style: inherit;
+	font-size: 100%;
+	font-family: inherit;
 	vertical-align: baseline;
 }
 
-/***LOGIN***/
- button[type=submit] { background: #4b6592 url(../images/buttonbg3.png) repeat-x top left; color: #fff; padding: 7px 20px; cursor: pointer; }
- button[type=submit]  { -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; border: 1px solid #395380; font-size: 12px; }
- button [type=submit] { text-transform: uppercase; text-shadow: 1px 1px #395380; margin-left: 170px; font-family:Arial;}
- button[type=submit]  { -moz-box-shadow: 1px 1px 2px #999; -webkit-box-shadow: 1px 1px 2px #999; box-shadow: 1px 1px 2px #999; margin: -5px 5px; }
- button[type=submit] :hover { background: #005681 url(../images/buttonbg3.png) repeat-x 0 -36px; }
- button[type=submit] :active { -moz-box-shadow: inset 2px 2px 2px #12274c; -webkit-box-shadow: inset 2px 2px 2px #12274c; box-shadow: inset 2px 2px 2px #12274c; }
-.log_logo{float:left; margin:60px 0 0 0;}
- #content{margin:100px auto;width:650px;min-height:350px; background: url(../images/blacktrans.png);;z-index:1;behaviour:url(border-radius.htc);box-shadow:0 0 9px 1px black;}
-#content{-moz-border-radius:8px;-webkit-border-radius:8px;-khtml-border-radius:8px;border-radius:8px;}
-#content>.log_form{width:300px; float:right; margin:70px 30px 0 0;}
-#content>.error_msg{}
-#content>.error_msg p{width:630px; background:#eee; text-align:center;padding:6px 0 6px 0; position:absolute;margin:20px 10px 0; color:#212121;font-weight:bold;}
-#content>.error_msg p{-moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px;font-size: 12px;  -moz-box-shadow: 1px 1px 2px #999; -webkit-box-shadow: 1px 1px 2px #999; box-shadow: 1px 1px 2px #999;}
-ul.log_foot{list-style-type:none; color:white; margin:270px auto 5px;text-align:center;}
-ul.log_foot li{display:inline; margin:0 20px 0 20px;}
-ul.log_foot li a{color:white;text-decoration:none;}
- input#username[type=text] { font-size: 12px; padding: 8px 5px; border: 1px solid #ccc; background: #fcfcfc; outline: none; }
- input#username[type=text] { -moz-box-shadow: inset 1px 1px 3px #ccc; -webkit-box-shadow: inset 1px 1px 3px #ccc; box-shadow: inset 1px 1px 3px #ccc; }
- input#username[type=text] { -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; margin:20px 0 20px 20px; width:260px; padding:8px 0 8px 40px; }
- input#username[type=text]{ border: 0; background: #eee url(../images/userfield.png) no-repeat; background-position: top left; width: 190px; margin-right: 10px; }
- input#username[type=text]:focus { background-color: #fff; background-position: 0 -32px; }
- input#password { font-size: 12px; padding: 8px 5px; border: 1px solid #ccc; background: #fcfcfc; outline: none; }
- input#password { -moz-box-shadow: inset 1px 1px 3px #ccc; -webkit-box-shadow: inset 1px 1px 3px #ccc; box-shadow: inset 1px 1px 3px #ccc;width:260px; padding:8px 0 8px 40px; }
- input#password { -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; margin-left: 20px; }
- input#password { border: 0; background: #eee url(../images/paswdfield.png) no-repeat; background-position: top left; width: 190px; margin-right: 10px; }
- input#password:focus{ background-color: #fff; background-position: 0 -32px; }
- label { width: 150px; float: left; text-align: left; padding-top: 5px; margin-right: 20px; }
- /***GENERAL STYLES***/
-body { font-family: Arial; font-size: 12px; }
-body { background: #333; line-height: 21px; }
-body {background:url("../images/bg.jpg")no-repeat;}
-input, select, textarea, button { outline: none; font-family: A; font-size: 12px; }
-input, select, textarea, button { border: 1px solid #ccc; padding: 5px; }
+body { line-height: 1; color: black; background: white; }
 
+ol, ul { list-style: none; }
+
+table { border-collapse: separate; border-spacing: 0; }
+
+caption, th, td { text-align: left; font-weight: normal; }
+
+blockquote:before, blockquote:after, q:before, q:after { content: ""; }
+
+blockquote, q { quotes: "" ""; }
+
+/*
+ style
+*/
+
+/* general */
+body { background: #eee url("../images/leftbg.png") repeat-y top left; line-height: 21px; font-family: Arial; font-size: 12px; }
+input, select, textarea, button { border: 1px solid #ccc; padding: 5px; outline: none; font-family: Arial; font-size: 12px; }
 a { text-decoration: none; outline: none; color: #069; }
 a:hover { text-decoration: underline; }
 button { margin: 0; outline: 0; }
 small { font-size: 11px; line-height: 12px; }
 
-.bodywhite { background: #fff; }
-.bodygrey { background: #eee url(../images/leftbg.png) repeat-y top left; }
-.page404 { background: #eee; }
+/* header */
+div#header { min-width: 980px; background: #333; padding: 20px 10px 11px 10px; height: 78px; border-top: 1px solid #444; }
+div#header div#account { position: absolute; right: 20px; top: 16px; background: url("../images/blacktrans.png"); padding: 10px 89px 10px 20px; overflow: hidden; line-height: 15px; -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; }
+div#header div#account h3 { font-size: 12px; color: #fff; font-weight: normal; }
+div#header div#account small { font-size: 11px; color: #999; }
+div#header div#account p { margin-top: 5px; }
+div#header div#account p a { font-size: 11px; color: #ccc; display: inline-block; color: #bbd0e8; }
+div#header div#account p a:hover { text-decoration: underline; }
+div#header div#account p a:first-child { margin-right: 5px; border-right: 1px solid #666; padding-right: 7px; }
+
+/* tab menu */
+div#header div#tabmenu { line-height: 21px; position: absolute; top: 71px; left: 220px; }
+div#header div#tabmenu ul { list-style: none; }
+div#header div#tabmenu ul li { display: inline-block; float: left; position: relative; background: #4b6592 url("../images/tabmenubg.png") repeat-x top left; }
+div#header div#tabmenu ul li:first-child { -moz-border-radius: 3px 0 0 0; -webkit-border-radius: 3px 0 0 0; border-radius: 3px 0 0 0; }
+div#header div#tabmenu ul li:hover { background: #37507f url("../images/tabmenubg.png") repeat-x 0 -68px; }
+div#header div#tabmenu ul li:last-child { -moz-border-radius: 0 3px 0 0; -webkit-border-radius: 0 3px 0 0; border-radius: 0 3px 0 0; }
+div#header div#tabmenu ul li:last-child a { background: none; }
+div#header div#tabmenu ul li a { display: inline-block; color: #fff; background: url("../images/separator.png") no-repeat right center; }
+div#header div#tabmenu ul li a:hover { text-decoration: none; }
+div#header div#tabmenu ul li a span { display: block; padding: 9px 15px 9px 40px; text-transform: uppercase; font-size: 12px; text-shadow: 1px 1px #224e82; }
+div#header div#tabmenu ul li.current { background: #eee; text-shadow: 1px 1px #fff; }
+div#header div#tabmenu ul li.current a { color: #333; background: none; }
+div#header div#tabmenu ul li.current a span { text-shadow: 1px 1px #fcfcfc; }
+
+/*
+div#header div#tabmenu ul li a.dashboard span { background: url(../images/icons/dashboard.png) no-repeat 15px 12px; }
+div#header div#tabmenu ul li.current a.dashboard span { background: url(../images/icons/dashboard.png) no-repeat 15px -57px; }
+div#header div#tabmenu ul li a.elements span { background: url(../images/icons/elements.png) no-repeat 15px 12px; }
+div#header div#tabmenu ul li.current a.elements span { background: url(../images/icons/elements.png) no-repeat 15px -57px; }
+div#header div#tabmenu ul li a.reports span { background: url(../images/icons/reports.png) no-repeat 15px 12px; }
+div#header div#tabmenu ul li.current a.reports span { background: url(../images/icons/reports.png) no-repeat 15px -57px; }
+div#header div#tabmenu ul li a.users span { background: url(../images/icons/users.png) no-repeat 15px 14px; }
+div#header div#tabmenu ul li.current a.users span { background: url(../images/icons/users.png) no-repeat 15px -59px; }
+*/
 
 /***TOP HEADER***/
-.header, .topheader { min-width: 980px; }
-.headerspace { height: 10px; background: #333; border-bottom: 1px solid #222; }
+/*
+.topheader { min-width: 980px; }
 
 .topheader> ul { list-style: none; position: absolute; top: 10px; left: 458px; }
 .topheader> ul > li { display: inline-block; float: left; margin-right: 8px; line-height: 14px; position: relative; }
@@ -73,43 +94,7 @@ small { font-size: 11px; line-height: 12px; }
 .topheader> ul > li > a:hover { background-position: right -88px; text-decoration: none; }
 .topheader> ul > li > a:hover .wrap { background-position: 0 -59px; }
 .topheader> ul > li.note a .wrap { padding-right: 0; }
-
-/***HEADER***/
-.header { background: #333; padding: 20px 10px 11px 10px; position: relative; height:76px;}
-.header { border-top: 1px solid #444; border-bottom: 3px solid #272727; }
-.accountinfo { position: absolute; right: 20px; top: 6px; background: url(../images/blacktrans.png); padding: 10px 89px 10px 10px; overflow: hidden; line-height: 15px; }
-.accountinfo { -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; }
-.accountinfo .info { float: left; margin-left: 10px; }
-.accountinfo h3 { font-size: 12px; color: #fff; font-weight: normal; }
-.accountinfo small { font-size: 11px; color: #999; }
-.accountinfo p { margin-top: 5px; }
-.accountinfo p a { font-size: 11px; color: #ccc; display: inline-block; color: #bbd0e8; }
-.accountinfo p a:hover { text-decoration: underline; }
-.accountinfo p a:first-child { margin-right: 5px; border-right: 1px solid #666; padding-right: 7px; }
-
-/***TAB MENU***/
-.tabmenu { line-height: 21px; position: absolute; top: 71px; left: 220px; }
-.tabmenu ul { list-style: none; }
-.tabmenu ul li { display: inline-block; float: left; position: relative; background: #4b6592 url(../images/tabmenubg.png) repeat-x top left; }
-.tabmenu ul li:first-child { -moz-border-radius: 3px 0 0 0; -webkit-border-radius: 3px 0 0 0; border-radius: 3px 0 0 0; }
-.tabmenu ul li:last-child { -moz-border-radius: 0 3px 0 0; -webkit-border-radius: 0 3px 0 0; border-radius: 0 3px 0 0; }
-.tabmenu ul li a { display: inline-block; color: #fff; background: url(../images/separator.png) no-repeat right center; }
-.tabmenu ul li a:hover { text-decoration: none; }
-.tabmenu ul li:last-child a { background: none; }
-.tabmenu ul li:hover { background: #37507f url(../images/tabmenubg.png) repeat-x 0 -68px; }
-.tabmenu ul li a span { display: block; padding: 9px 15px 9px 40px; text-transform: uppercase; font-size: 12px; text-shadow: 1px 1px #224e82; }
-.tabmenu ul li.current { background: #eee; text-shadow: 1px 1px #fff; }
-.tabmenu ul li.current a { color: #333; background: none; }
-.tabmenu ul li.current a span { text-shadow: 1px 1px #fcfcfc; }
-
-.tabmenu ul li a.dashboard span { background: url(../images/icons/dashboard.png) no-repeat 15px 12px; }
-.tabmenu ul li.current a.dashboard span { background: url(../images/icons/dashboard.png) no-repeat 15px -57px; }
-.tabmenu ul li a.elements span { background: url(../images/icons/elements.png) no-repeat 15px 12px; }
-.tabmenu ul li.current a.elements span { background: url(../images/icons/elements.png) no-repeat 15px -57px; }
-.tabmenu ul li a.reports span { background: url(../images/icons/reports.png) no-repeat 15px 12px; }
-.tabmenu ul li.current a.reports span { background: url(../images/icons/reports.png) no-repeat 15px -57px; }
-.tabmenu ul li a.users span { background: url(../images/icons/users.png) no-repeat 15px 14px; }
-.tabmenu ul li.current a.users span { background: url(../images/icons/users.png) no-repeat 15px -59px; }
+*/
 
 /***SIDEBAR***/
 .sidebar { padding: 20px 0 20px 0; width: 220px; display: block; float: left; }
@@ -278,7 +263,4 @@ textarea.mf_filter { height: 100px; }
 
 
 /** FOOTER**/
-.footer { background: #333; padding: 10px 0; }
-.footerinner { padding: 0 20px; text-align: right; font-size: 11px; color: #ccc; }
-.footer_float { position: fixed; bottom: 0; left: 0; width: 100%; }
-
+#footer { background: #333; position: fixed; bottom: 0; left: 0; width: 100%; padding: 10px 0px; text-align: right; font-size: 11px; color: #ccc; }
