--- a/src/Mcms/UserBundle/Resources/views/index.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/index.html.twig
@@ -26,22 +26,22 @@
 
 {% block content %}	
 	{% if error %}
-		<div class="error_msg"><p>{{ error.message }}</p></div>
+		<div class="error"><p>{{ error.message }}</p></div>
 	{% endif %}
-	<div class="log_logo"><img src="{{ asset('images/log_logo.png') }}"></div>
-	<div class="log_form">
-	<form action="{{ path('login_check') }}" method="post">				
-		<input type="text" id="username" name="_username" value="{{ last_username }}" />
-		<br class="clear">				
-		<input type="password" id="password" name="_password" />
-		<br class="clear">
-		<button type="submit">Zaloguj</button>
+	<div id="login-logo"><img src="{{ asset('images/log_logo.png') }}"></div>
+	<div id="login-form">
+		<form action="{{ path('login_check') }}" method="post">				
+			<input type="text" id="username" name="_username" value="{{ last_username }}" />
+			<br />				
+			<input type="password" id="password" name="_password" />
+			<br />
+			<button type="submit">Zaloguj</button>
 		</form>
 	</div>
 {% endblock %}
 
 {% block footer %}
-	<ul class="log_foot">
+	<ul id="login-footer">
 		<li><a href="#">Warunki użytkowania</a></li>				
 		<li><a href="#">Regulamin</a></li>
 		<li><a href="#">Pomoc</a></li>
