--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -17,10 +17,12 @@
 			<!-- logo -->
 			<a href=""><img src="images/logo.png" alt="" /></a>    
 			<div id="tabmenu">
-				<ul>
-					<li class="current"><a href="main.html" class=""><span>Strona główna</span></a></li>          
-					<li><a href="users.html" class=""><span>Użytkownicy</span></a></li>					
-				</ul>
+				{% block tabmenu %}
+					<ul>
+						<li class="current"><a href="main.html" class=""><span>Strona główna</span></a></li>          
+						<li><a href="users.html" class=""><span>Użytkownicy</span></a></li>					
+					</ul>
+				{% endblock %}
 			</div><!-- tabmenu -->
     
 			<div id="account">
