--- a/app/Resources/views/helpers.html.twig
+++ b/app/Resources/views/helpers.html.twig
@@ -1,4 +1,9 @@
 {# app/Resources/helpers.html.twig #}
-{% macro tab(route,caption) %} 
+
+{% macro tab(route, caption) %} 
     <li{% if app.request.attributes.get('_route') == route %} class="current"{% endif %}><a href="{{ path(route) }}" class=""><span>{{ caption }}</span></a></li> 
+{% endmacro %}
+
+{% macro menu(route, caption) %}
+	<li><a href=""{{ path(route) }}>{{ caption }}</a></li>
 {% endmacro %}
