--- a/src/Mcms/UserBundle/Resources/views/list.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/list.html.twig
@@ -1,19 +1,20 @@
-{% extends '::base.html.twig' %}
-{% block stylesheets %}
-<script src="{{ asset('js/jquery.dataTables.min.js') }}" type="text/javascript" ></script>
-<script type="text/javascript">
-$(document).ready(function() {
-    $('#example').dataTable();
-} );
-</script>
+{% extends '::dashboard.html.twig' %}
+{% block javascripts_head %}
+	<script type="text/javascript">
+		$(document).ready(function() {
+    		$('.example').dataTable();
+		} );
+	</script>
 {% endblock %}
 
+{% block title %} Lista użytkowników {% endblock %}
+
+{% block sidebar %} {% include 'McmsUserBundle::sidebar.html.twig' %} {% endblock %}
+
 {% block content %}
- <h1 class="pageTitle">Lista użytkowników</h1>
-	<div class="tableOpt">
-			
-    </div><!--end table Options-->	
-		<table cellpadding="0" cellspacing="0" class="tableHead" width="100%" id="example">
+ 	<h1 class="pageTitle">Lista użytkowników</h1>
+	<div class="tableOpt"></div><!--end table Options-->	
+		<table cellpadding="0" cellspacing="0" class="tableHead" width="100%" class="example">
 				<colgroup>
 					<col class="head1" width="20%" />
 					<col class="head0" width="20%" />
@@ -30,7 +31,7 @@ $(document).ready(function() {
 				</tr>
 		</table>
 	<div class="tableWrapper">
-        <table cellpadding="0" cellspacing="0" class="table" id="example" width="100%">
+        <table cellpadding="0" cellspacing="0" class="table" class="example" width="100%">
                 <colgroup>
                     <col class="con1" width="20%" />
                     <col class="con0" width="20%" />
@@ -57,5 +58,4 @@ $(document).ready(function() {
 			{% endfor %}
 		</table>		
 	</div>	
-	
 {% endblock %}
