--- a/src/Mcms/UserBundle/Resources/views/list.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/list.html.twig
@@ -1,4 +1,6 @@
+{# src/Mcms/UserBundle/Resources/views/show.html.twig #}
 {% extends '::dashboard.html.twig' %}
+
 {% block javascripts_head %}
 	<script type="text/javascript">
 		$(document).ready(function() {
