--- a/src/Mcms/UserBundle/Resources/views/changePassword.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/changePassword.html.twig
@@ -1,8 +1,14 @@
-{% extends '::base.html.twig' %}
-{% block body %}
-<form action="{{ path('changePasswordProcess')}}" method="post" {{ form_enctype(form) }}>
-	{{form_errors(form)}}
-    {{ form_widget(form) }}
-    <input type="submit" />
-</form>
+{# src/Mcms/UserBundle/Resources/views/show.html.twig #}
+{% extends '::dashboard.html.twig' %}
+
+{% block title %} Zmiana hasła {% endblock %}
+
+{% block sidebar %} {% include 'McmsUserBundle::sidebar.html.twig' %} {% endblock %}
+
+{% block content %}
+	<form action="{{ path('changePasswordProcess')}}" method="post" {{ form_enctype(form) }}>
+		{{form_errors(form)}}
+    	{{ form_widget(form) }}
+    	<input type="submit" />
+	</form>
 {% endblock %}
