--- a/src/Mcms/UserBundle/Resources/views/show.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/show.html.twig
@@ -1,4 +1,17 @@
-{% extends '::base.html.twig' %}
+{# src/Mcms/UserBundle/Resources/views/show.html.twig #}
+{% extends '::dashboard.html.twig' %}
+
+{% block javascripts_head %}
+	<script type="text/javascript">
+		$(document).ready(function() {
+    		$('.example').dataTable();
+		} );
+	</script>
+{% endblock %}
+
+{% block title %} Szczegóły użytkownika {% endblock %}
+
+{% block sidebar %} {% include 'McmsUserBundle::sidebar.html.twig' %} {% endblock %}
 
 {% block content %}	
 	<h1 class="pageTitle">Szczegóły użytkownika</h1>
@@ -12,7 +25,7 @@
 				</form>
 			</h4>	            
         </div><!--end table Options-->
-			<table cellpadding="0" cellspacing="0" class="tableHead" width="100%" id="example">
+			<table cellpadding="0" cellspacing="0" class="tableHead" width="100%" class="example">
 				<colgroup>
 					<col class="head1" width="15%" />
 					<col class="head0" width="17%" />
